example/secondfile/objects/ATT_API_Error_Code_Mapping__c.object
<CustomObject>
    <description>Error code mappings for AT&amp;T Direct Consumption APIs</description>
    <fields>
        <fullName>API__c</fullName>
        <label>API</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Code__c</fullName>
        <label>Category Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_ID__c</fullName>
        <label>Code ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Downstream_Error__c</fullName>
        <label>Downstream Error</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Error__c</fullName>
        <description>Error returned to Partner</description>
        <label>Partner Error</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Code__c</fullName>
        <label>Return Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Valid</label>
        <type>Checkbox</type>
    </fields>
    <label>AT&amp;T API Error Code Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>API__c</columns>
        <columns>Category_Code__c</columns>
        <columns>Code_ID__c</columns>
        <columns>Downstream_Error__c</columns>
        <columns>Entity__c</columns>
        <columns>Partner_Error__c</columns>
        <columns>Return_Code__c</columns>
        <columns>Valid__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CODE-{000000}</displayFormat>
        <label>AT&amp;T API Error Code Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AT&amp;T API Error Code Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>